Add more slides [wip]

--- a/slides/index.html
+++ b/slides/index.html
@@ -18,6 +18,90 @@
             <div class="slides">
                 <section>
                     <h2>Canberra Code Dojo #1</h2>
+                    <p>@tumbarumba</p>
+                    <p>#CanberraCodeDojo</p>
+                    <aside class="notes">
+                        <p>Welcome ot the first Canberra Code Dojo!</p>
+                    </aside>
+                </section>
+                <section>
+                    <h2>Introductions</h2>
+                    <p>Say the three things:</p>
+                    <ul>
+                        <li>Your name</li>
+                        <li>What you do (at work or study)</li>
+                        <li>A random factoid about you personally</li>
+                    </ul>
+                    <aside class="notes">
+                        <p>The first computer I used was an Apple IIe in high school, in the 80's</p>
+                    </aside>
+                </section>
+                <section>
+                    <h2>What does it mean?</h2>
+                    <p>Dojo means:<br>
+                        Place of learning the way</p>
+                    <p>道<br>
+                        場</p>
+                </section>
+                <section>
+                    <h2>Chado Dojo</h2>
+                    <img src="images/chado-dojo.jpg">
+                </section>
+                <section>
+                    <h2>Dojo Kun</h2>
+                    <ul>
+                        <li class="fragment">Jin &mdash; courage, benevolence</li>
+                        <li class="fragment">Gi &mdash; truth, integrity</li>
+                        <li class="fragment">Rei &mdash; respect, courtesy</li>
+                        <li class="fragment">Makoto &mdash; sincerity, honesty</li>
+                        <li class="fragment">Yuki &mdash; courage</li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Kata?</h2>
+                    <img src="images/kata.jpg">
+                </section>
+                <section>
+                    <h2>Deliberate Practice</h2>
+                    <ul>
+                        <li class="fragment">Gladwell "10,000 hour rule"
+                            <ul><li>practice to achieve expert performance</li></ul>
+                        </li>
+                        <li class="fragment">But practice must be:
+                            <ul>
+                                <li>focussed</li>
+                                <li>goal-directed</li>
+                                <li>stretch your abilities</li>
+                                <li>give continuous feedback</li>
+                                <li>followed by self-reflection</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Format</h2>
+                    <ul>
+                        <li>Pair up (self-organise)</li>
+                        <li>We present the kata (problem to be solved)</li>
+                        <li>Focus for one pomodoro (25 mins)</li>
+                        <li>Stop, take 5 min break to:
+                            <ul>
+                                <li>Demo your code to anyone nearby</li>
+                                <li>Get food or drink</li>
+                                <li>Reflect...</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>XP: eXtreme Programming</h2>
+                    <img style="float: right; width: 45%" src="images/dials.png">
+                    <ul style="float: left; width: 50%">
+                        <li>Pair programming</li>
+                        <li>Test-Driven Development (TDD)</li>
+                        <li>Refactoring</li>
+                        <li>Simple Design</li>
+                    </ul>
                 </section>
             </div>
         </div>
