--- a/slides/index.html
+++ b/slides/index.html
@@ -39,83 +39,193 @@
                 </aside>
             </section>
             <section>
-                <h2>What does it mean?</h2>
-                <p>Dojo means:<br>
-                    Place of learning the way</p>
-                <p>道<br>
-                    場</p>
+                <section>
+                    <h2>What does it mean?</h2>
+                    <p>Dojo means:<br>
+                        Place of learning the way</p>
+                    <p>道<br>
+                        場</p>
+                </section>
+                <section>
+                    <h2>Chado Dojo</h2>
+                    <img src="images/chado-dojo.jpg">
+                </section>
+                <section>
+                    <h2>Dojo Kun</h2>
+                    <ul>
+                        <li class="fragment">Jin &mdash; courage, benevolence</li>
+                        <li class="fragment">Gi &mdash; truth, integrity</li>
+                        <li class="fragment">Rei &mdash; respect, courtesy</li>
+                        <li class="fragment">Makoto &mdash; sincerity, honesty</li>
+                        <li class="fragment">Yuki &mdash; courage</li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Kata?</h2>
+                    <img src="images/kata.jpg">
+                </section>
+                <section>
+                    <h2>Deliberate Practice</h2>
+                    <ul>
+                        <li class="fragment">Gladwell "10,000 hour rule"
+                            <ul>
+                                <li>practice to achieve expert performance</li>
+                            </ul>
+                        </li>
+                        <li class="fragment">But practice must be:
+                            <ul>
+                                <li>focussed</li>
+                                <li>goal-directed</li>
+                                <li>stretch your abilities</li>
+                                <li>give continuous feedback</li>
+                                <li>followed by self-reflection</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Format</h2>
+                    <ul>
+                        <li>Pair up (self-organise)</li>
+                        <li>We present the kata (problem to be solved)</li>
+                        <li>Focus for one pomodoro (25 mins)</li>
+                        <li>Stop, take 5 min break to:
+                            <ul>
+                                <li>Demo your code to anyone nearby</li>
+                                <li>Get food or drink</li>
+                                <li>Reflect...</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </section>
             </section>
             <section>
-                <h2>Chado Dojo</h2>
-                <img src="images/chado-dojo.jpg">
+                <section>
+                    <h2>XP: eXtreme Programming</h2>
+                    <ul style="float: left; width: 50%">
+                        <li>Pair programming</li>
+                        <li>Test-Driven Development (TDD)</li>
+                        <li>Refactoring</li>
+                        <li>Simple Design</li>
+                    </ul>
+                    <img style="float: right; width: 45%" src="images/dials.png">
+                </section>
+                <section>
+                    <h2>Test-Driven Development</h2>
+                    <div class="r-stack">
+                        <img class="fragment" src="images/tdd-1a.png">
+                        <img class="fragment" src="images/tdd-1b.png">
+                    </div>
+                </section>
+                <section>
+                    <h2>TDD: Better</h2>
+                    <img src="images/tdd-actual.png">
+                </section>
+                <section>
+                    <h2>Refactoring</h2>
+                    <ul>
+                        <li>Make sure <strong>all</strong> the tests pass</li>
+                        <li>Make a <strong>small</strong> change to the design of the code that
+                            <strong>improves</strong> it</li>
+                        <li>Make sure all the tests <strong>still</strong> pass</li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Simple Design</h2>
+                    <ul>
+                        <li>Code passes all the tests</li>
+                        <li>Is clear, expressive and consistent</li>
+                        <li>Duplicates no behaviour or configuration</li>
+                        <li>Minimises the number of moving parts</li>
+                    </ul>
+                </section>
             </section>
             <section>
-                <h2>Dojo Kun</h2>
-                <ul>
-                    <li class="fragment">Jin &mdash; courage, benevolence</li>
-                    <li class="fragment">Gi &mdash; truth, integrity</li>
-                    <li class="fragment">Rei &mdash; respect, courtesy</li>
-                    <li class="fragment">Makoto &mdash; sincerity, honesty</li>
-                    <li class="fragment">Yuki &mdash; courage</li>
-                </ul>
+                <section>
+                    <h2>Kata 1</h2>
+                </section>
+                <section>
+                    <h2>Hajime!</h2>
+                    <p>
+                        始め<br>
+                        Begin!
+                    </p>
+                </section>
+                <section>
+                    <h2>Yame!</h2>
+                    <p>
+                        辞め<br>
+                        Stop!
+                    </p>
+                </section>
+                <section>
+                    <h2>Stop!</h2>
+                    <ul>
+                        <li>Stop typing!</li>
+                        <li>Now!</li>
+                        <li>5 min break</li>
+                    </ul>
+                </section>
             </section>
             <section>
-                <h2>Kata?</h2>
-                <img src="images/kata.jpg">
+                <section>
+                    <h2>Kata 2</h2>
+                </section>
+                <section>
+                    <h2>Hajime!</h2>
+                    <p>
+                        始め<br>
+                        Begin!
+                    </p>
+                </section>
+                <section>
+                    <h2>Yame!</h2>
+                    <p>
+                        辞め<br>
+                        Stop!
+                    </p>
+                </section>
+                <section>
+                    <h2>Stop!</h2>
+                    <ul>
+                        <li>Stop typing!</li>
+                        <li>Now!</li>
+                        <li>5 min break</li>
+                    </ul>
+                </section>
             </section>
             <section>
-                <h2>Deliberate Practice</h2>
-                <ul>
-                    <li class="fragment">Gladwell "10,000 hour rule"
-                        <ul>
-                            <li>practice to achieve expert performance</li>
-                        </ul>
-                    </li>
-                    <li class="fragment">But practice must be:
-                        <ul>
-                            <li>focussed</li>
-                            <li>goal-directed</li>
-                            <li>stretch your abilities</li>
-                            <li>give continuous feedback</li>
-                            <li>followed by self-reflection</li>
-                        </ul>
-                    </li>
-                </ul>
+                <section>
+                    <h2>Kata 3</h2>
+                </section>
+                <section>
+                    <h2>Hajime!</h2>
+                    <p>
+                        始め<br>
+                        Begin!
+                    </p>
+                </section>
+                <section>
+                    <h2>Yame!</h2>
+                    <p>
+                        辞め<br>
+                        Stop!
+                    </p>
+                </section>
+                <section>
+                    <h2>Stop!</h2>
+                    <ul>
+                        <li>Stop typing!</li>
+                        <li>Now!</li>
+                        <li>5 min break</li>
+                    </ul>
+                </section>
             </section>
-            <section>
-                <h2>Format</h2>
-                <ul>
-                    <li>Pair up (self-organise)</li>
-                    <li>We present the kata (problem to be solved)</li>
-                    <li>Focus for one pomodoro (25 mins)</li>
-                    <li>Stop, take 5 min break to:
-                        <ul>
-                            <li>Demo your code to anyone nearby</li>
-                            <li>Get food or drink</li>
-                            <li>Reflect...</li>
-                        </ul>
-                    </li>
-                </ul>
-            </section>
-            <section>
-                <h2>XP: eXtreme Programming</h2>
-                <ul style="float: left; width: 50%">
-                    <li>Pair programming</li>
-                    <li>Test-Driven Development (TDD)</li>
-                    <li>Refactoring</li>
-                    <li>Simple Design</li>
-                </ul>
-                <img style="float: right; width: 45%" src="images/dials.png">
-            </section>
-            <section>
-                <h2>Test-Driven Development</h2>
-                <div class="r-stack">
-                    <img class="fragment" src="images/tdd-1a.png">
-                    <img class="fragment" src="images/tdd-1b.png">
-                </div>
-            </section>
-            <section>
-                <h2>TDD: Better</h2>
+            <section id="reflection"
+                    data-background="images/reflection.jpg"
+                    data-background-size="contain"
+                    data-background-color="black">
+                <h2>Reflection</h2>
             </section>
         </div>
     </div>
