--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             </section>
             <section id="reflection"
                     data-background="images/reflection.jpg"
-                    data-background-size="contain"
+                    data-background-size="cover"
                     data-background-color="black">
                 <h2>Reflection</h2>
             </section>
