Rename Kata -> Pomodoro

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>Canberra Code Dojo #1</title>
+    <title>Canberra Code Dojo</title>
 
     <link rel="stylesheet" href="reveal.js/dist/reset.css">
     <link rel="stylesheet" href="reveal.js/dist/reveal.css">
     <link rel="stylesheet" href="reveal.js/dist/theme/simple.css">
+    <link rel="stylesheet" href="dojo.css">
 
     <!-- Theme used for syntax highlighted code -->
     <link rel="stylesheet" href="reveal.js/plugin/highlight/monokai.css">
@@ -19,7 +20,7 @@
     <div class="reveal">
         <div class="slides">
             <section>
-                <h2>Canberra Code Dojo #1</h2>
+                <h2>Canberra Code Dojo</h2>
                 <p>@tumbarumba</p>
                 <p>#CanberraCodeDojo</p>
                 <aside class="notes">
@@ -142,7 +143,11 @@
             </section>
             <section>
                 <section>
-                    <h2>Kata 1</h2>
+                    <h2>First Pomodoro</h2>
+                    <ul>
+                        <li>25 minutes kata</li>
+                        <li>5 minutes break</li>
+                    </ul>
                 </section>
                 <section>
                     <h2>Hajime!</h2>
@@ -169,7 +174,11 @@
             </section>
             <section>
                 <section>
-                    <h2>Kata 2</h2>
+                    <h2>Second Pomodoro</h2>
+                    <ul>
+                        <li>25 minutes kata</li>
+                        <li>5 minutes break</li>
+                    </ul>
                 </section>
                 <section>
                     <h2>Hajime!</h2>
@@ -196,7 +205,11 @@
             </section>
             <section>
                 <section>
-                    <h2>Kata 3</h2>
+                    <h2>Third Pomodoro</h2>
+                    <ul>
+                        <li>25 minutes kata</li>
+                        <li>5 minutes break</li>
+                    </ul>
                 </section>
                 <section>
                     <h2>Hajime!</h2>
