Fix practice versus practise

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <ul>
                         <li class="fragment">Gladwell "10,000 hour rule"
                             <ul>
-                                <li>practice to achieve expert performance</li>
+                                <li>practise to achieve expert performance</li>
                             </ul>
                         </li>
                         <li class="fragment">But practice must be:
@@ -94,9 +94,9 @@
                             <ul>
                                 <li>Demo your code to anyone nearby</li>
                                 <li>Get food or drink</li>
-                                <li>Reflect...</li>
                             </ul>
                         </li>
+                        <li>Reflect...</li>
                     </ul>
                 </section>
             </section>
