--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
 
     <!-- Theme used for syntax highlighted code -->
     <link rel="stylesheet" href="reveal.js/plugin/highlight/monokai.css">
+    <!-- Icons -->
+    <style>
+        img.icon {
+            display: inline;
+            width: 0.75em;
+            height: 0.75em;
+            margin: 0;
+            padding: 0;
+            vertical-align: middle;
+        }
+    </style>
 </head>
 
 <body>
@@ -21,7 +32,12 @@
         <div class="slides">
             <section>
                 <h2>Canberra Code Dojo</h2>
-                <p>@tumbarumba</p>
+                <ul style="list-style-type: none;">
+                    <li><img class="icon" src="images/linkedin.svg">&nbsp;Joe Schmetzer</li>
+                    <li><img class="icon" src="images/github.svg">&nbsp;tumbarumba</li>
+                    <li><img class="icon" src="images/twitter.svg">&nbsp;@tumbarumba</li>
+                    <li><img class="icon" src="images/mastodon.svg">&nbsp;@tumbarumba@techhub.social</li>
+                </ul>
                 <p>#CanberraCodeDojo</p>
                 <aside class="notes">
                     <p>Welcome ot the first Canberra Code Dojo!</p>
