--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
             </section>
             <section>
                 <h2>Introductions</h2>
-                <p>Say the three things:</p>
+                <p>Say the four things:</p>
                 <ul>
                     <li>Your name</li>
                     <li>What you do (at work or study)</li>
                     <li>A random factoid about you personally</li>
+                    <li>Preferred coding language</li>
                 </ul>
                 <aside class="notes">
                     <p>The first computer I used was an Apple IIe in high school, in the 80's</p>
